force-app/main/default/objects/Disbursal_Payee__c/Disbursal_Payee__c.object-meta.xml
<CustomObject>
    <label>Disbursal Payee</label>
    <nameField>
        <displayFormat>DPN-{0000}</displayFormat>
        <label>Disbursal Payee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Disbursal Payees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>