force-app/main/default/objects/Disbursal_Payee__c/fields/Beneficiary_Amount__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_Amount__c</fullName>
    <label>Beneficiary Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>