force-app/main/default/objects/Disbursal_Payee__c/fields/Beneficiary_Bank_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_Bank_Account_Number__c</fullName>
    <label>Beneficiary Bank Account Number</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>