force-app/main/default/objects/Disbursal_Payee__c/fields/Beneficiary_IFSC_Code__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_IFSC_Code__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Beneficiary IFSC Code</label>
    <referenceTo>IFSC_Code_Master__c</referenceTo>
    <relationshipLabel>Disbursal Payees</relationshipLabel>
    <relationshipName>Disbursal_Payees</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>