force-app/main/default/objects/Disbursal_Payee__c/fields/Beneficiary_Name__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_Name__c</fullName>
    <label>Beneficiary Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>