force-app/main/default/objects/Disbursal_Payee__c/fields/Beneficiary_Type__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_Type__c</fullName>
    <label>Beneficiary Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>