force-app/main/default/objects/Disbursal_Payee__c/fields/Disbursal__c.field-meta.xml
<CustomField>
    <fullName>Disbursal__c</fullName>
    <label>Disbursal</label>
    <referenceTo>Disbursal__c</referenceTo>
    <relationshipLabel>Disbursal Payees</relationshipLabel>
    <relationshipName>Disbursal_Payees</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>