force-app/main/default/objects/Disbursal_Payee__c/fields/Is_Verified__c.field-meta.xml
<CustomField>
    <fullName>Is_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Will be verified from Penny Drop API</description>
    <label>Is Verified</label>
    <type>Checkbox</type>
</CustomField>